# fmatrix

./: .gitignore  LICENSE  Matrix.fsproj  Package.swift  Program.fs  README.md  fmatrix.sln  matrix.cabal
Sources/smatrix/: Column.swift  Config.swift  Drop.swift  Matrix.swift  Terminal.swift  main.swift  smatrix.swift
src/: Init.fs  Init.hs  Main.hs  Render.fs  Render.hs  Types.fs  Types.hs  Update.fs  Update.hs
