cabal-version:       2.2

name:                matrix
version:             0.1.0.0
homepage:            https://github.com/githubuser/matrix#readme
license:             MIT
license-file:        LICENSE
author:              4ster-light
maintainer:          example@example.com
copyright:           2024 4ster-light
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable matrix
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Init
                       Update
                       Types
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       random,
                       ansi-terminal,
                       mtl,
                       terminal-size,
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
